# ftxui-playground

./: .clang-format  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-multiple-platform.yml  cmake-single-platform.yml
include/: enhanced_menu.h  filesystem_wrapper.h  folder_menu.h  multiselect_menu.h
src/: enhanced_menu.cpp  enhanced_menu.h  filesystem_wrapper.cpp  folder_menu.cpp  folder_menu.h  main.cpp  menu_util.h  multiselect_menu.cpp  multiselect_menu.h  reference.h
test/: hello_test.cc
